fix/PresentationPreview spacing

--- a/client/src/components/PresentationPreview.scss
+++ b/client/src/components/PresentationPreview.scss
@@ -1,7 +1,7 @@
 .view-presentation {
 	padding: 0 0 2rem;
 	@media (max-width: 600px) {
-		padding: 1rem 0 2rem;
+		padding: 0 1rem 2rem;
 	}
 
 	#spinner-parent {
